--- a/now.json
+++ b/now.json
@@ -1,8 +1,8 @@
 {
   "name": "badges_server",
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@now/node-server" }],
-  "routes": [{ "src": "/(.*)", "dest": "./index.js" }],
+  "builds": [{ "src": "index.js", "use": "@now/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/index.js" }],
   "env": {
     "DB_USER": "@platzibadge-db-user",
     "DB_PASSWORD": "@platzibadge-db-password",
